# eyes

./: Cargo.toml  config.toml  eyes.code-workspace  libtensorflowlite_c.dylib
src/: WeirdVision.rs  connection.rs  constants.rs  data.rs  eye.rs  fbo.rs  layers.rs  main.rs  modules.rs  osc.rs  scopae_io.rs  scopae_screen.rs  scraen.rs  screen.rs  serial_Output.rs  settings.rs  ui.rs  vision.rs  walk.rs  webcam.rs
src/modules/: connection.rs  scraen.rs  timer.rs  ui.rs  vision.rs  webcam.rs
src/modules/scraen/: fbo.rs
src/modules/webcam/: camera.rs  detector.rs
src/scopae_io/: face_detector.rs  serial_output.rs  vision.rs  webcam.rs
src/scopae_screen/: eye.rs  fbo.rs
src/scraen/: fbo.rs
src/webcam/: camera.rs  jcam.rs  movenet.rs
