[package]
name = "eyes"
version = "0.1.0"
edition = "2021"


[dependencies]
nannou = "0.18.1"
nannou_wgpu = "0.18.0"
serial2 = "0.1.6"
futures = "0.3"
nannou_osc = "0.18.0"
rustface = "0.1.7"
anyhow = "1.0.64"
nannou_egui = "0.5.0"


nokhwa = {version = "0.9.4", features = ["input-v4l", "output-threaded"]}


[dependencies.image]
version = "0.23.14" 
default-features = false

