[package]
name = "eyes"
version = "0.1.0"
edition = "2021"


[dependencies]
nannou = "0.18.1"
nannou_wgpu = "0.18.0"
serial2 = "0.1.6"
futures = "0.3"
nannou_osc = "0.18.0"
rustface = "0.1.7"
nannou_egui = "0.5.0"
anyhow = "1.0.64"
time = { version = "0.3.1", features = ["macros"] }


nokhwa = {version = "0.9.4", features = ["input-avfoundation", "output-threaded"]}
# nokhwa = {git = "https://github.com/l1npengtul/nokhwa.git", branch = "senpai", features =["output-threaded"]}


# regex = { git = "https://github.com/rust-lang/regex", branch = "next" }

# git = "https://github.com/l1npengtul/nokhwa.git", branch = "senpai", 
chrono = "0.4.1"
randomwalk = "0.1.3"
rand_distr = "0.4.3"
rand_hc = "0.3.1"

image = {version = "0.23.14", default-features = false }
# [features]

# nokhwa = ["input-avfoundation", "output-threaded"]